--- a/math/subtraction/index.html
+++ b/math/subtraction/index.html
@@ -13,7 +13,13 @@
 
     <div class="container">
         <div class="coins">
-            Coins:
+
+        </div>
+        <div id="total">
+
+        </div>
+        <div id="accuracy">
+
         </div>
         <div class="numberContainer">
             <div class="topNumber">
