--- a/math/addition/index.html
+++ b/math/addition/index.html
@@ -12,8 +12,17 @@
 <body>
 
     <div class="container">
+        <!-- Making the coin's container -->
         <div class="coins">
-            Coins:
+
+        </div>
+        <!-- Making the container for the total -->
+        <div id="total">
+
+        </div>
+        <!-- Making the accuracy container -->
+        <div id="accuracy">
+
         </div>
         <div class="numberContainer">
             <div class="topNumber">
