--- a/math/subtraction/index.html
+++ b/math/subtraction/index.html
@@ -10,14 +10,17 @@
     <title>Math Game</title>
 </head>
 <body>
-
+    <!-- Making the container -->
     <div class="container">
+        <!-- Making the coin's container -->
         <div class="coins">
 
         </div>
+        <!-- Making the container for the total -->
         <div id="total">
 
         </div>
+        <!-- Making the accuracy container -->
         <div id="accuracy">
 
         </div>
