--- a/math/calculating/2-digit/addition/index.html
+++ b/math/calculating/2-digit/addition/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 
+    <noscript>
+        Your browser does not support javascript.
+    </noscript>
+
     <div class="container">
         <!-- Making the coin's container -->
         <div class="coins">
