--- a/math/calculating/2-digit/subtraction/index.html
+++ b/math/calculating/2-digit/subtraction/index.html
@@ -10,6 +10,9 @@
     <title>Math Game</title>
 </head>
 <body>
+    <noscript>
+        Your browser does not support javascript.
+    </noscript>
     <!-- Making the container -->
     <div class="container">
         <!-- Making the coin's container -->
