--- a/math/calculating/3-digit/subtraction-with-regrouping/index.html
+++ b/math/calculating/3-digit/subtraction-with-regrouping/index.html
@@ -11,6 +11,9 @@
 </head>
 <body>
 
+    <noscript>
+        Your browser does not support javascript.
+    </noscript>
     <div class="container">
         <div class="coins">
 
